syntax = "proto3";

option java_package = "com.example.project_self.proto";
option java_multiple_files = true;

message InvoiceProduct {
  uint64 productId = 1;
  uint32 count = 2;
  uint64 price = 3;
  uint64 discount = 4;
}

message SavedInvoice {
  uint64 date = 1;
  uint64 customerId = 2;
  repeated InvoiceProduct invoiceProducts = 3;
}

message SavedInvoices {
  repeated SavedInvoice invoices = 1;
}